# controller/coba.go
@@ -102,6 +102,18 @@ func GetPresensi(c *fiber.Ctx) error {
 		})
 	}
 
+	// UpdateData godoc
+	// @Summary Update data presensi.
+	// @Description Ubah data presensi.
+	// @Tags Presensi
+	// @Accept json
+	// @Produce json
+	// @Param id path string true "Masukan ID"
+	// @Param request body ReqPresensi true "Payload Body [RAW]"
+	// @Success 200 {object} Presensi
+	// @Failure 400
+	// @Failure 500
+	// @Router /update/{id} [put]
 	func UpdateData(c *fiber.Ctx) error {
 		db := config.Ulbimongoconn
 	
